# cftail

./: .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  default.nix  flake.nix  mise.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: crosscompile.yml  release-plz.yml  release.yml  rust.yml
changelog.d/: 20220903_215646_s.r.walker101_endpoint_url.md
examples/: nested_stacks.rs
seeddata/: Makefile  cloudformation.yml  deploy.sh
src/: aws.rs  cfclient.rs  error.rs  exponential_backoff.rs  fetch.rs  main.rs  nested_stacks.rs  stack_status.rs  stacks.rs  tail.rs  utils.rs  writer.rs
src/aws/: aws_sdk.rs  mod.rs  rusoto.rs
tests/responses/: single_event.xml
