[package]
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"
name = "cftail"
version = "0.9.3"
license = "Apache-2.0"
description = "Tail CloudFormation deploys"
repository = "https://github.com/simonrw/cftail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
serde = {version = "1.0.228", features = ["derive"]}
serde-xml-rs = "0.8.2"
structopt = "0.3.20"
termcolor = "1.4.1"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.41"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
thiserror = "2.0.17"
futures = "0.3.31"
term_size = "0.3.2"
notify-rust = "4.11.7"
term-table = "1.4.0"
aws-config = "1.8.11" 
aws-sdk-cloudformation = "1.103.0"
aws-smithy-types = "1.3.4"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
humantime = "2.3.0"
aws-smithy-types-convert = { version = "0.60.10", features = ["convert-chrono"] }

[dev-dependencies]
env_logger = "0.11.8"
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v4"] }

[profile.release]
opt-level = "z"
